--- a/downloadables.html
+++ b/downloadables.html
@@ -437,13 +437,13 @@ header {
             <section class="download-section">
                 <h2>General information</h2>
                 <div class="download-grid">
-                        <a href="path/to/consent_form.pdf" download class="download-item">
+                        <a href="/img/pdfs/Benefits vs Responsibilities.pdf" download class="download-item">
                         <div class="download-icon-wrapper">
                             <i class="fas fa-file-pdf"></i>
                         </div>
-                        <h3>Pdf 1</h3>
+                        <h3>Benefits vs Responsibilities</h3>
                         <p></p>
-                    <a href="path/to/patient_guide.pdf" download class="download-item">
+                    <!-- <a href="path/to/patient_guide.pdf" download class="download-item">
                         <div class="download-icon-wrapper">
                             <i class="fas fa-file-pdf"></i>
                         </div>
@@ -456,7 +456,7 @@ header {
                         </div>
                         <h3>Pdf 3</h3>
                         <p>Summary of pdf 3</p>
-                    </a>
+                    </a> -->
 
                     </a>
                 </div>
@@ -465,18 +465,18 @@ header {
             <section class="download-section">
                 <h2>Diagrams & Images</h2>
                 <div class="download-grid">
-                    <a href="/img/images/Non journey/Ch 2 j.png" download class="download-item">
-                        <img src="/img/images/Non journey/Ch 2 j.png" alt="Types of Craniosynostosis" class="download-thumbnail">
+                    <a href="/img/images/Non journey/Types.png" download class="download-item">
+                        <img src="/img/images/Non journey/Types.png" alt="Types of Craniosynostosis" class="download-thumbnail">
                         <h3>Types of Craniosynostosis</h3>
                     </a>
-                    <a href="path/to/.png" download class="download-item">
-                        <img src="https://placehold.co/300x200/cce0eb/333?text=" alt="Other" class="download-thumbnail">
-                        <h3></h3>
+                    <a href="/img/images/Cranial Vault/CVPost-timeline.png" download class="download-item">
+                        <img src="/img/images/Cranial Vault/CVPost-timeline.png" alt="A post-surgery timeline for a child, titled Post surgery timeline, with a note that it May change depending on the healing of your child. The timeline starts with Surgery, followed by Hospital stay for 4/5 days. One week after surgery, Swelling reduces. The timeline shows Check-ups with Surgeon marked by orange diamond icons at 1 month, 3 months, and 6 months post-surgery. CT scans are scheduled at 1 month and 1 year post-surgery." class="download-thumbnail">
+                        <h3>General timeline: Cranial Vault reshaping</h3>
                         <p></p>
                     </a>
-                    <a href="path/to/.jpg" download class="download-item">
-                        <img src="https://placehold.co/300x200/cce0eb/333?text=" alt="Other" class="download-thumbnail">
-                        <h3></h3>
+                    <a href="/img/images/Endoscopic/EPost-timeline.png" download class="download-item">
+                        <img src="/img/images/Endoscopic/EPost-timeline.png"  alt="A post-surgery timeline for Endoscopic Strip Craniectomy, titled Endoscopic Strip Craniectomy - Post surgery timeline, with a note that it May change depending on the healing of your child. The timeline begins with Surgery, followed by Hospital stay for 2-3 days. A team monitors the infant every hour. One week after surgery, swelling reduces and the first helmet arrives. Two weeks post-surgery, the first helmet fitting occurs. Check-ups with the surgeon (orange diamonds) and orthotics (blue diamonds) are scheduled every 6 weeks. New helmet fittings (yellow circles) occur at approximately 3 months and 7 months post-surgery, with new helmets arriving (orange outlined circles) shortly before the fittings. A CT scan is scheduled 1 year after surgery." class="download-thumbnail">
+                        <h3>General timeline: Endoscopic Strip Craniectomy</h3>
                         <p></p>
                     </a>
                 </div>
