Adding glossart and resources

--- a/glossary.html
+++ b/glossary.html
@@ -575,16 +575,12 @@ header {
                         <span class="glossary-definition">The removal of something, often a part of the body, by cutting or other surgical means.</span>
                     </li>
                     <li>
-                        <span class="glossary-term">Abnormally [ab-NOR-muh-lee]:</span>
-                        <span class="glossary-definition">In a way that is not normal, usual, or typical.</span>
-                    </li>
-                    <li>
                         <span class="glossary-term">Adolescents [ad-uh-LES-ents]:</span>
                         <span class="glossary-definition">Teenagers, or young people who are no longer children but not yet adults.</span>
                     </li>
                     <li>
                         <span class="glossary-term">Anesthesia [an-es-THEE-zhuh]:</span>
-                        <span class="glossary-definition">Medicine given to prevent pain during surgery or to make a person go to sleep during a medical procedure.</span>
+                        <span class="glossary-definition">o	The use of medications (called anaesthetics) to prevent pain during surgery. There are various types of anaesthetics including local, regional and general anaesthesia, each serving different medical needs. Most craniofacial surgery is performed under a general anaesthetic.</span>
                     </li>
                     </ul>
             </div>
@@ -594,7 +590,7 @@ header {
                 <ul class="glossary-list">
                     <li>
                         <span class="glossary-term">Brachycephaly [brak-ee-SEF-uh-lee]:</span>
-                        <span class="glossary-definition">A condition where a baby's head is unusually flat at the back, can be either positional/deformational (sutures are still open) or synostosis (sutures have fused).</span>
+                        <span class="glossary-definition">A condition where a baby's head is unusually flat at the back and short from front to back, can be either positional/deformational (sutures are still open) or synostosis (sutures have fused).</span>
                     </li>
                     <!-- <li>
                         <span class="glossary-term">Brainstem:</span>
@@ -607,21 +603,26 @@ header {
                 <h2 class="letter-heading">C</h2>
                 <ul class="glossary-list">
                     <li>
-                        <span class="glossary-term">Cerebellum:</span>
-                        <span class="glossary-definition">The part of the brain at the back of the skull in vertebrates, which coordinates and regulates muscular activity.</span>
+                        <span class="glossary-term">Coronal Suture [kor-roh-nuhl soo-CH-er]:</span>
+                        <span class="glossary-definition">Refers to a specific suture (line where skull bones meet) that runs horizontally across the top of the head.</span>
                     </li>
                     <li>
-                        <span class="glossary-term">Cerebrum:</span>
-                        <span class="glossary-definition">The principal and most anterior part of the brain in vertebrates, located in the front area of the skull and consisting of two hemispheres.</span>
+                    <li>
+                        <span class="glossary-term">Cranial Vault [KRAY-nee-al volt]:</span>
+                        <span class="glossary-definition"> The parts of the skull at the top of the head that surround and protect the brain.</span>
                     </li>
                     <li>
-                        <span class="glossary-term">Craniotomy:</span>
-                        <span class="glossary-definition">A surgical operation in which a bone flap is temporarily removed from the skull to access the brain.</span>
+                        <span class="glossary-term">Craniectomy [kray-nee-EK-tuh-mee]:</span>
+                        <span class="glossary-definition">A surgical procedure that involves removing a portion of the skull.</span>
+                    </li>
+                    <li>
+                        <span class="glossary-term">Craniosynostosis [kray-nee-oh-sin-oh-s-TOE-sis]:</span>
+                        <span class="glossary-definition">A condition where one or more sutures in a baby's skull fuse too early, which can cause the head to grow in an abnormal shape.</span>
                     </li>
                     </ul>
             </div>
 
-            <div id="D" class="glossary-letter-group">
+            <!-- <div id="D" class="glossary-letter-group">
                 <h2 class="letter-heading">D</h2>
                 <ul class="glossary-list">
                     <li>
@@ -629,19 +630,19 @@ header {
                         <span class="glossary-definition">The tough outermost membrane enveloping the brain and spinal cord.</span>
                     </li>
                     </ul>
-            </div>
+            </div> -->
 
             <div id="E" class="glossary-letter-group">
                 <h2 class="letter-heading">E</h2>
                 <ul class="glossary-list">
                     <li>
-                        <span class="glossary-term">Endoscopy:</span>
-                        <span class="glossary-definition">A non-surgical procedure used to examine a person's digestive tract using an endoscope, a flexible tube with a light and camera.</span>
+                        <span class="glossary-term">Endoscopic [en-doh-SKOP-ik]:</span>
+                        <span class="glossary-definition">A tiny camera used by doctors during certain surgeries.</span>
                     </li>
                     </ul>
             </div>
 
-            <div id="F" class="glossary-letter-group">
+            <!-- <div id="F" class="glossary-letter-group">
                 <h2 class="letter-heading">F</h2>
                 <ul class="glossary-list">
                     <li>
@@ -649,9 +650,9 @@ header {
                         <span class="glossary-definition">A soft spot on an infant's skull where the bones have not yet fused.</span>
                     </li>
                     </ul>
-            </div>
+            </div> -->
 
-            <div id="H" class="glossary-letter-group">
+            <!-- <div id="H" class="glossary-letter-group">
                 <h2 class="letter-heading">H</h2>
                 <ul class="glossary-list">
                     <li>
@@ -659,14 +660,18 @@ header {
                         <span class="glossary-definition">The process which causes bleeding to stop, meaning to keep blood within a damaged blood vessel.</span>
                     </li>
                     </ul>
-            </div>
+            </div> -->
 
             <div id="I" class="glossary-letter-group">
                 <h2 class="letter-heading">I</h2>
                 <ul class="glossary-list">
                     <li>
-                        <span class="glossary-term">Intracranial:</span>
-                        <span class="glossary-definition">Within the skull.</span>
+                        <span class="glossary-term">Incision [in-SIZH-un]:</span>
+                        <span class="glossary-definition"> A cut or opening made by a surgeon during an operation.</span>
+                    </li>
+                    <li>
+                        <span class="glossary-term">Irregularities [ih-reg-yoo-LAIR-ih-teez]:</span>
+                        <span class="glossary-definition"> Uneven or abnormal features; things that are not smooth or typical.</span>
                     </li>
                     </ul>
             </div>
@@ -675,18 +680,28 @@ header {
                 <h2 class="letter-heading">L</h2>
                 <ul class="glossary-list">
                     <li>
-                        <span class="glossary-term">Laparoscopy:</span>
-                        <span class="glossary-definition">A surgical procedure in which a fiber-optic instrument is inserted through the abdominal wall to view the organs in the abdomen or permit small-scale surgery.</span>
+                        <span class="glossary-term">Lambdoid Suture [lam-doy-d soo-CH-er]:</span>
+                        <span class="glossary-definition">One of the two major sutures at the back of the skull.</span>
                     </li>
                     </ul>
             </div>
 
-            <div id="N" class="glossary-letter-group">
-                <h2 class="letter-heading">N</h2>
+            <div id="M" class="glossary-letter-group">
+                <h2 class="letter-heading">M</h2>
                 <ul class="glossary-list">
                     <li>
-                        <span class="glossary-term">Neurosurgery:</span>
-                        <span class="glossary-definition">Medical specialty concerned with the diagnosis and surgical treatment of disorders of the central and peripheral nervous system.</span>
+                        <span class="glossary-term">Metopic Suture [meh-top-ik soo-CH-er]:</span>
+                        <span class="glossary-definition">The suture in the central forehead that runs from the soft spot in the front to the top of the nose</span>
+                    </li>
+                    </ul>
+            </div>
+
+            <div id="O" class="glossary-letter-group">
+                <h2 class="letter-heading">O</h2>
+                <ul class="glossary-list">
+                    <li>
+                        <span class="glossary-term">Orthotics [or-THOT-iks]:</span>
+                        <span class="glossary-definition">The field of healthcare that deals with the design and use of special devices (like helmets or braces) to support or correct parts of the body.</span>
                     </li>
                     </ul>
             </div>
@@ -695,8 +710,20 @@ header {
                 <h2 class="letter-heading">P</h2>
                 <ul class="glossary-list">
                     <li>
-                        <span class="glossary-term">Pathology:</span>
-                        <span class="glossary-definition">The science of the causes and effects of diseases, especially the branch of medicine that deals with the laboratory examination of samples of body tissue for diagnostic or forensic purposes.</span>
+                        <span class="glossary-term">Plagiocephaly [play-jee-oh-SEF-uh-lee]:</span>
+                        <span class="glossary-definition">A condition where a baby's head is flattened on one side, can be either positional/deformational (sutures are still open) or synostosis (sutures have fused). Plagio means asymmetric.</span>
+                    </li>
+                    </ul>
+                <ul class="glossary-list">
+                    <li>
+                        <span class="glossary-term">Protrude [pro-TROOD]:</span>
+                        <span class="glossary-definition"> To stick out from something.</span>
+                    </li>
+                    </ul>
+                <ul class="glossary-list">
+                    <li>
+                        <span class="glossary-term">Psychosocial [sy-koh-SOH-shul]:</span>
+                        <span class="glossary-definition">Relating to the combination of psychological and social factors; how a person's thoughts and emotions interact with their social environment.</span>
                     </li>
                     </ul>
             </div>
@@ -705,8 +732,8 @@ header {
                 <h2 class="letter-heading">R</h2>
                 <ul class="glossary-list">
                     <li>
-                        <span class="glossary-term">Resection:</span>
-                        <span class="glossary-definition">The surgical removal of part of an organ or structure.</span>
+                        <span class="glossary-term">Repercussions [ree-per-KUSH-unz]:</span>
+                        <span class="glossary-definition">Unintended and usually negative consequences that follow an action or event.</span>
                     </li>
                     </ul>
             </div>
@@ -715,12 +742,22 @@ header {
                 <h2 class="letter-heading">S</h2>
                 <ul class="glossary-list">
                     <li>
-                        <span class="glossary-term">Scalpel:</span>
-                        <span class="glossary-definition">A small and extremely sharp-bladed instrument used for surgery, anatomical dissection, and various arts and crafts.</span>
+                        <span class="glossary-term">Sagittal Suture [SAJ-i-tal soo-CH-er]:</span>
+                        <span class="glossary-definition"> The suture that runs from the soft spot in the front to the soft spot in the back in the middle of the skull.</span>
                     </li>
                     <li>
-                        <span class="glossary-term">Suture:</span>
-                        <span class="glossary-definition">A medical device used to hold body tissues together after an injury or surgery.</span>
+                        <span class="glossary-term">Surgeon [NYUR-oh-ser-jun]:</span>
+                        <span class="glossary-definition">A doctor who performs surgery.</span>
+                    </li>
+
+                    <li>
+                        <span class="glossary-term">Sutures [SOO-chers]:</span>
+                        <span class="glossary-definition">The flexible connections between the bones of a baby's skull allow the skull to grow.</span>
+                    </li>
+
+                    <li>
+                        <span class="glossary-term">Synostosis [sin-oh-s-TOE-sis]:</span>
+                        <span class="glossary-definition">Referring to the fusion of two or more bones. </span>
                     </li>
                     </ul>
             </div>
@@ -729,13 +766,13 @@ header {
                 <h2 class="letter-heading">T</h2>
                 <ul class="glossary-list">
                     <li>
-                        <span class="glossary-term">Tumor:</span>
-                        <span class="glossary-definition">A mass of tissue formed by an abnormal growth of cells.</span>
+                        <span class="glossary-term">Transfusions [trans-FYOO-zhunz]:</span>
+                        <span class="glossary-definition">The process of receiving blood products from a donor.</span>
                     </li>
                     </ul>
             </div>
 
-            <div id="W" class="glossary-letter-group">
+            <!-- <div id="W" class="glossary-letter-group">
                 <h2 class="letter-heading">W</h2>
                 <ul class="glossary-list">
                     <li>
@@ -743,7 +780,7 @@ header {
                         <span class="glossary-definition">A complex operation to remove the head of the pancreas, the first part of the small intestine (duodenum), the gallbladder, and the bile duct.</span>
                     </li>
                     </ul>
-            </div>
+            </div> -->
 
 
             </main>
