--- a/resources.html
+++ b/resources.html
@@ -328,29 +328,35 @@ header {
             <h1>Other Resources</h1>
 
             <section class="resource-section">
-                <h2>Information from Hospitals</h2>
+                <h2>Hospitals</h2>
                 <ul>
-                    <li><a href="" target="_blank"><u>TEXT</u></a> - text info</li>
-                    <li><a href="" target="_blank"><u>TEXT</u></a> - text info</li>
-                    <li><a href="" target="_blank"><u>TEXT</u></a> - text info</li>
+                    <li><a href="https://neurosurgery.med.ubc.ca/programs/pediatric-neurosurgical-service/craniosynostosis-program/" target="_blank"><u>University of British Columbia Craniosynostosis Program</u></a></li>
+                    <li><a href="https://myhealth.alberta.ca/Health/pages/conditions.aspx?Hwid=hw180325" target="_blank"><u>MyHealth.Alberta Craniosynostosis</u></a> </li>
+                    <li><a href="https://www.nationwidechildrens.org/conditions/craniosynostosis" target="_blank"><u>Nationwide Childrens Craniosynostosis</u></a> </li>
+                    <li><a href="https://www.cincinnatichildrens.org/health/c/craniosynostosis" target="_blank"><u>Cincinnati Childrens Craniosynostosis</u></a> </li>
+                    <li><a href="https://www.seattlechildrens.org/conditions/craniosynostosis/" target="_blank"><u>Seattle Childrens Craniosynostosis</u></a> </li>
+                    <li><a href="https://www.childrenshospital.org/conditions/craniosynostosis" target="_blank"><u>Boston Childrens Hospital Craniosynostosis</u></a> </li>
+                    <li><a href="https://www.chop.edu/conditions-diseases/craniosynostosis" target="_blank"><u>Childrens Hospital of Philadelphia Craniosynostosis</u></a> </li>
+                    <li><a href="https://www.gosh.nhs.uk/conditions-and-treatments/conditions-we-treat/?query=craniosynostosis" target="_blank"><u>Great Ormond Street Hospital for Children Craniosynostosis</u></a> </li>
+                    <li><a href="https://www.hopkinsmedicine.org/health/conditions-and-diseases/craniosynostosis" target="_blank"><u>John Hopkins Medicine Craniosynostosis</u></a> </li>
                 </ul>
             </section>
 
             <section class="resource-section">
                 <h2>Support Pages</h2>
                 <ul>
-                    <li><a href="" target="_blank"><u>TEXT</u></a> - text info</li>
-                    <li><a href="" target="_blank"><u>TEXT</u></a> - text info</li>
-                    <li><a href="" target="_blank"><u>TEXT</u></a> - text info</li>
+                    <li><a href="https://www.cappskids.org/craniosynostosis-support/" target="_blank"><u>Cappskids</u></a> </li>
+                    <li><a href="https://ccakids.org/" target="_blank"><u>Childrens craniofacial association</u></a></li>
+                    <!-- <li><a href="" target="_blank"><u>TEXT</u></a> - text info</li> -->
                 </ul>
             </section>
 
             <section class="resource-section">
                 <h2>Patient Stories</h2>
                 <ul>
-                    <li><a href="" target="_blank"><u>TEXT</u></a> - text info</li>
-                    <li><a href="" target="_blank"><u>TEXT</u></a> - text info</li>
-                    <li><a href="" target="_blank"><u>TEXT</u></a> - text info</li>
+                    <li><a href="https://www.cincinnatichildrens.org/service/c/craniosynostosis/patient-stories" target="_blank"><u>Cincinnati Childrens Hospital Craniosynostosis Patient stories</u></a></li>
+                    <li><a href="https://craniocarebears.org/success-stories/" target="_blank"><u>Craniocarebears success stories</u></a></li>
+                    <li><a href="https://www.chop.edu/centers-programs/craniofacial-program/patient-stories" target="_blank"><u>Childrens Hospital of Philadelphia Patient stories</u></a></li>
                 </ul>
             </section>
 
