Add in skulls for poster + modal

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
                     <div class="team-members">
                         <div class="team-member">
-                            <img src="https://via.placeholder.com/150" alt="Team Member 1" class="team-portrait">
+                            <img src="/img/images/BMC_2T5_Stefanie_Wang.jpg" alt="Picture of Stefanie Jinyin Wang" class="team-portrait">
                             <h3>Stefanie Jinyin Wang</h3>
                             <h4>BA&Sc, MSCBMC</h4>
                             <p>Medical Illustrator and Developer</p>
@@ -65,7 +65,7 @@
 
             <div class="content-stack">
                 <p class="intro-text">
-                    This is a narrative based module that will teach you the basics of Endoscopic and Cranial Vault surgical journeys.
+                    This is a narrative based resource that will teach you the basics of Endoscopic and Cranial Vault surgical journeys.
                 </p>
                 <h4>This resource is currently optimized for laptop or desktop use only.</h4>
                 <button class="btn btn-primary-orange" id="startbtn" onclick="startJourney()">Start</button>
