Get rid of chapter, change colours

--- a/path_selection.html
+++ b/path_selection.html
@@ -189,7 +189,7 @@
         }
         /* ... Other button styles remain the same ... */
         /* .card-select-button1:hover, .card-select-button2:hover{transform: scale(1.1);}
-        .card-select-button1{background-color: #2D6460;color: white;}
+        .card-select-button1{background-color: #2D643E;color: white;}
         .card-select-button1:hover{background-color: #A9C384;}
         .card-select-button2{background-color: #6118d6;color: white;}
         .card-select-button2:hover{background-color: #ba9bdd;}
