Path selection illustrations

--- a/path_selection.html
+++ b/path_selection.html
@@ -234,13 +234,14 @@
         <p>Click one of the surgical paths to learn more</p>
     </div>
 
+<!-- Endoscopic card -->
     <div class="path-options-container">
         <div class="path-option-card">
             <div class="card-header">
                 <div class="age-info">Before 4 months old</div>
             </div>
             <div class="card-image-container">
-                <img src="img/images/Slide 4_3 .png" alt="Endoscopic Surgery Illustration">
+                <img src="img/images/Non journey/NJPath-E.png" alt="Endoscopic Surgery Illustration">
             </div>
             <div class="card-content">
                 <div>
@@ -255,12 +256,13 @@
             </div>
         </div>
 
+<!-- Cranial Vault card -->
         <div class="path-option-card">
             <div class="card-header">
                 <div class="age-info">All ages</div>
             </div>
             <div class="card-image-container">
-                <img src="img/images/Slide 4_3 .png" alt="Cranial Vault Reshaping Illustration">
+                <img src="img/images/Non journey/NJPath-CV.png" alt="Cranial Vault Reshaping Illustration">
             </div>
             <div class="card-content">
                 <div>
